frontend/test/should_fail/index_exec_loop_node_fromIndexSame_argument_mismatch.grg
#using "index_exec_model.gm"

sequence s()
{
	for{n:Node in nodesFromIndexSame(fooi, "foo"); true }
}